# stackoverflow-trends

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  justfile  setup.cfg  tox.ini
.cache/: amazon-cloudformation.json  android.json  angular.json  angularjs.json  ansible.json  archlinux.json  asciidoc.json  ash.json  asp.net-core.json  assembly.json  astropy.json  atom-editor.json  autotools.json  ava.json  avro.json  axios.json  backbone.js.json  bamboo.json  bash.json  bazaar.json  bazel.json  bitbucket.json  blackberry.json  blogger.json  bokeh.json  boost-build.json  bootstrap-4.json  bootstrap-5.json  bower.json  brave.json  browserify.json  bson.json  buck.json  bulma.json  c#.json  c++.json  c.json  c3.js.json  caffe.json  cakephp.json  (+252 more)
.github/workflows/: ci.yml  update.yml
cache/: amazon-cloudformation.json  android.json  angular.json  angularjs.json  ansible.json  archlinux.json  ash.json  asp.net-core.json  assembly.json  astropy.json  atom-editor.json  autotools.json  ava.json  avro.json  axios.json  backbone.js.json  bamboo.json  bash.json  bazaar.json  bazel.json  bitbucket.json  blackberry.json  blogger.json  bokeh.json  boost-build.json  bootstrap-4.json  bootstrap-5.json  bower.json  brave.json  browserify.json  bson.json  buck.json  bulma.json  bzr.json  c#.json  c++.json  c.json  c3.js.json  caffe.json  cakephp.json  (+241 more)
data/: groups.json  plot.py  update.py
data-github/: groups.json  plot.py  update.py
data-github/data/: BVLC_caffe.json  ExpressionEngine_ExpressionEngine.json  JetBrains_kotlin.json  JuliaLang_julia.json  Kitware_CMake.json  LibreOffice_core.json  MariaDB_server.json  MicrosoftEdge_MSEdge.json  PowerShell_PowerShell.json  PrestaShop_PrestaShop.json  SCons_scons.json  TYPO3_TYPO3.CMS.json  Theano_Theano.json  WordPress_WordPress.json  airbnb_javascript.json  andrejv_maxima.json  angular_angular.js.json  angular_angular.json  ansible_ansible.json  antirez_redis.json  apache_lucene-solr.json  apache_openoffice.json  apache_subversion.json  apple_swift.json  ash-shell_ash.json  astropy_astropy.json  atom_atom.json  avajs_ava.json  axios_axios.json  balderdashy_sails.json  bazelbuild_bazel.json  bokeh_bokeh.json  boostorg_build.json  bower_bower.json  browserify_browserify.json  cakephp_cakephp.json  chaijs_chai.json  chef_chef.json  chromium_chromium.json  chromium_gyp.json  (+103 more)
data-stackoverflow/: groups.json  plot.py  update.py
data-stackoverflow/data/: amazon-cloudformation.json  android.json  angular.json  angularjs.json  ansible.json  archlinux.json  ash.json  assembly.json  astropy.json  atom-editor.json  autotools.json  ava.json  avro.json  axios.json  backbone.js.json  backbone.json  bamboo.json  bash.json  bazel.json  bitbucket.json  blackberry.json  blogger.json  bokeh.json  boost-build.json  bower.json  browserify.json  bson.json  buck.json  bzr.json  c#.json  c++.json  c.json  caffe.json  cakephp.json  chai.json  chef.json  chromium.json  cinnamon.json  circleci.json  clojure.json  (+184 more)
data/data/: amazon-cloudformation.json  android.json  angular.json  angularjs.json  ansible.json  archlinux.json  ash.json  assembly.json  astropy.json  atom-editor.json  autotools.json  ava.json  avro.json  axios.json  backbone.js.json  bamboo.json  bash.json  bazel.json  bokeh.json  (+250 more)
hotware/: __about__.py  __init__.py  github.py  plot.py  stackoverflow-plot.py  stackoverflow-update.py  stackoverflow.py  tools.py
stacktags/: __about__.py  stackoverflow.py  tools.py
test/: test_hotware.py  test_stacktags.py
tests/: test_basic.py
tools/: _main.py  create-readme-plots.py  groups.json
(+9 files in other folders)
