[metadata]
name = stacktags
version = 0.2.1
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Software popularity graphs
url = https://github.com/nschloe/stacktags
project_urls =
    Code=https://github.com/nschloe/stacktags
    Issues=https://github.com/nschloe/stacktags/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
packages = find:
install_requires =
    dufte
    importlib_metadata;python_version<"3.8"
    matplotlib
    requests
    rich
python_requires = >=3.6

[options.entry_points]
console_scripts =
    stacktags-so-tag-history = stacktags.cli:tag_history
